Fix deployment: restore mixins, update workflow

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -97,7 +97,7 @@
 
     &:focus {
       outline: none;
-      border-color: $color-primary;
+      border-color: var(--color-primary);
     }
   }
 
