--- a/src/components/Education/Education.scss
+++ b/src/components/Education/Education.scss
@@ -59,7 +59,7 @@
 
 .institution {
   font-size: 1.125rem;
-  color: $color-primary;
+  color: var(--color-primary);
   margin-bottom: $spacing-md;
 }
 
