--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -29,7 +29,7 @@
 .logo {
   font-size: 1.5rem;
   font-weight: 700;
-  color: $color-primary;
+  color: var(--color-primary);
   cursor: pointer;
   @include transition(transform, $transition-fast);
 
@@ -77,7 +77,7 @@
   @include transition(all, $transition-fast);
 
   &:hover {
-    color: $color-primary;
+    color: var(--color-primary);
     background-color: var(--color-background-alt);
   }
 
