--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -79,7 +79,7 @@
   width: 50px;
   height: 50px;
   background-color: white;
-  color: $color-primary;
+  color: var(--color-primary);
   border-radius: $radius-full;
   font-size: 1.5rem;
   @include transition(all, $transition-fast);
