--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -121,7 +121,7 @@ body {
 
 // Highlight
 .highlight {
-  color: $color-primary;
+  color: var(--color-primary);
 }
 
 // Buttons
@@ -149,23 +149,23 @@ body {
 
 .btn-secondary {
   background: transparent;
-  color: $color-primary;
-  border: 2px solid $color-primary;
+  color: var(--color-primary);
+  border: 2px solid var(--color-primary);
   
   &:hover {
-    background: $color-primary;
+    background: var(--color-primary);
     color: white;
   }
 }
 
 // Links
 a {
-  color: $color-primary;
+  color: var(--color-primary);
   text-decoration: none;
   @include transition(color);
   
   &:hover {
-    color: $color-primary-dark;
+    color: var(--color-primary-dark);
   }
 }
 
