--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -75,15 +75,43 @@
   padding: 0.5rem 1rem;
   border-radius: $radius-md;
   @include transition(all, $transition-fast);
+  position: relative;
 
   &:hover {
     color: var(--color-primary);
     background-color: var(--color-background-alt);
   }
 
+  &.active {
+    color: var(--color-primary);
+    font-weight: 600;
+    
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 60%;
+      height: 2px;
+      background-color: var(--color-primary);
+      border-radius: $radius-full;
+    }
+  }
+
   @include mobile {
     width: 100%;
     text-align: left;
+    
+    &.active::after {
+      left: 1rem;
+      transform: none;
+      width: 4px;
+      height: 60%;
+      top: 50%;
+      bottom: auto;
+      transform: translateY(-50%);
+    }
   }
 }
 
