--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -54,6 +54,18 @@
     height: 100%;
     object-fit: cover;
     @include transition(transform, $transition-slow);
+    
+    &.loading {
+      filter: blur(5px);
+      opacity: 0.7;
+    }
+    
+    &.loaded {
+      filter: blur(0);
+      opacity: 1;
+      @include transition(filter, $transition-base);
+      @include transition(opacity, $transition-base);
+    }
   }
 }
 
